# transaction_service

./: .dockerignore  .gitignore  Makefile  README.md  check.py  docker-compose.yaml  pyproject.toml
envs/: django.env.example  postgres.env.example
transaction_service/: Dockerfile
transaction_service/app/: admin.py  apps.py  exceptions.py  models.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
transaction_service/app/migrations/: 0001_initial.py  0002_alter_transaction_unique_together.py
transaction_service/transaction_service/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
