[tool.poetry]
name = "transaction-service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^6.0"
psycopg2 = "^2.9.11"
redis = "^7.1.0"
celery = "^5.6.0"
djangorestframework = "^3.16.1"
ruff = "^0.14.8"
django-environ = "^0.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
